fixed alignment on projects page

--- a/portfoliosite/styles/stales.css
+++ b/portfoliosite/styles/stales.css
@@ -599,7 +599,7 @@ footer {
 }
 
 .word-game-card p {
-    text-align: justify;
+    text-align: center;
     background: #7A8E60;
     font-size: 20px;
     border: 3px solid #6C7E55;
@@ -611,7 +611,7 @@ footer {
 }
 
 .rafting-site-card p {
-    text-align: justify;
+    text-align: center;
     background: #7A8E60;
     font-size: 20px;
     border: 3px solid #6C7E55;
@@ -622,7 +622,7 @@ footer {
 }
 
 .text-adventure-card p {
-    text-align: justify;
+    text-align: center;
     background: #7A8E60;
     font-size: 20px;
     border: 3px solid #6C7E55;
